fix dark mode menu border

--- a/src/scss/theme/dark/menu.scss
+++ b/src/scss/theme/dark/menu.scss
@@ -5,7 +5,7 @@
 
     /* Common */
 
-    .menu { background: $colorBgLight; border: 0.5px solid #4C4B43; }
+    .menu { background: $colorBgLight; border: 0.5px solid #393933; }
 
     .menu {
         .icon.text { background-image: url('#{$themePath}/icon/menu/action/block/text0.svg'); }
